--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -1,5 +1,5 @@
 .LightTheme {
-    --color-primary: #75A1DE;
+    --color-primary: #213f7f;
     --color-secondary: #d7d7d7;
     --color-background: white;
     --color-background-secondary: #e7edf3;
